<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DrinkActivity"
    android:weightSum="1"
    android:baselineAligned="true">

    <TextView
        android:text="@string/enter_your_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drinksLabel"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/volume_in_oz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/volumeLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/volumeEdit"
        android:hint="@string/volume_of_one_drink"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/proof_of_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proofLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="11dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/proofEdit"
        android:hint="@string/proof_as_whole_number"
        android:textSize="18sp"
        android:textAlignment="center" />

    <Button
        android:text="@string/add_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addDrinkButton"
        android:textSize="14sp"
        android:onClick="addDrink" />

    <TextView
        android:text="@string/number_of_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actualBACLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numDrinksLabel"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:text="@string/how_long_have_you_been_drinking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lengthLabel"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/lengthEdit"
        android:hint="@string/time_in_hours"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:text="@string/find_bac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/findBACButton"
        android:textSize="14sp"
        android:layout_marginTop="16sp"
        android:onClick="calculateAnswer" />

    <Button
        android:text="Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drinksToInfoButton"
        android:onClick="goToInfo"
        android:background="@color/colorAccent" />

</GridLayout>