<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.timmcvicker.baccalculator.PersonActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/tell_us_about_yourself"
        android:layout_width="match_parent"
        android:id="@+id/personPromptLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/what_is_your_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genderLabel"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_weight="0.10"
        android:spinnerMode="dropdown"
        android:prompt="@string/select_gender"/>

    <TextView
        android:text="What is your weight?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weightLabel"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightText"
        android:hint="weight as whole number"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <Button
        android:text="Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        android:onClick="next"
        android:layout_marginTop="32sp" />

    <Button
        android:text="Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personToInfo"
        android:background="@color/colorAccent"
        android:onClick="goToInfo" />
</LinearLayout>